[gd_scene load_steps=5 format=3 uid="uid://bd12wlbatkecl"]

[ext_resource type="Script" path="res://scenes/Stone/stone_rigid_body.gd" id="1_er65i"]
[ext_resource type="Texture2D" uid="uid://day20kvuqn7jt" path="res://resourses/sprite/Boulder.png" id="1_sl8eu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r0trj"]
radius = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_41e2r"]
radius = 23.0868

[node name="StoneRigidBody" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_er65i")

[node name="Boulder" type="Sprite2D" parent="."]
scale = Vector2(3.07143, 3.07143)
texture = ExtResource("1_sl8eu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r0trj")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_41e2r")
debug_color = Color(0.678672, 0.300814, 0.999634, 0.42)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
